--- a/index.html
+++ b/index.html
@@ -11,24 +11,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-        <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Bryan Tong" />
-        <meta property="og:description" content="The personal homepage of Bryan Tong." />
-        <meta property="og:image" content="http://btong.me/images/favicon.png" />
-		<script src="/google_analytics_auto.js"></script>
 	</head>
 	<body class="landing">
+
 		<!-- Header -->
 			<header id="header" class="alt">
                 <h1>
@@ -49,24 +34,12 @@
                       }
                     </script>
                 </h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<!-- Sorry, hidden while website is WIP.  Easter eggs yay!
-                        			<li><a href="http://blog.btong.me/">Blog</a></li>
-						<li><a href="bio.html">About</a></li> -->
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Bryan Tong</h2>
-				<p>Student at UC Berkeley<br />Designer &amp; Entrepreneur</p>
-				<ul class="actions">
-					<li><a href="#about" class="button special big">Who?</a></li>
-				</ul>
+				<p>Student at UC Berkeley, Designer, and Entrepreneur</p>
 			</section>
 
 			<!-- About -->
@@ -81,20 +54,11 @@
 							</div>
 							<div class="6u$ 12u$(medium)">
 								<p>Hey there!  I'm a California native, born and raised in the Bay Area.
-                                I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
-                                and I aim to pick up a double-major in Legal Studies.  Eventually, I intend to work in the consumer electronics
-                                industry, specifically relating to interaction and virtual reality.</p>
-                                <!-- <p>Hey there!  I'm a California native, born and raised in the Bay Area.
-                                Though my last name is Chinese, I am actually a mix of Chinese, Japanese, and German.
-                                I speak English and Japanese, though there are many other languages I wish to learn.
-                                (This seems to be what most people are curious about.)</p>
-								<p>Originally homeschooled most of my life, I (for whatever reason)
-                                chose to change into public school and ended up here - UC Berkeley.
-                                I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
-                                and I aim to pick up a double-major in Legal Studies.</p> -->
-                               	<ul class="actions">
-									<li><a href="/bio.html" class="button alt">More Bio</a></li>
-								</ul>
+								<br />
+                I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,<br />
+                and I aim to pick up a double-major in Legal Studies.  Eventually, I intend to work in the consumer electronics
+                industry, specifically relating to interaction and virtual reality.</p>
+
 							</div>
 						</div>
 					</div>
@@ -202,7 +166,7 @@
                                         	<span style="color: #B2B2B2;">(925) 577-6826</span>
                                 </header>
                                 <p>Available for contracting work and tutoring.</p>
-                                
+
 							</div>
                             <!-- Right, contact -->
 							<div class="6u$ 12u$(medium)" style="color: white;">
@@ -230,8 +194,8 @@
 							</div>
 						</div>
 					</div>
-				</section>            
-			
+				</section>
+
             <!-- Footer -->
 			<footer id="footer">
 				<div class="container">
