--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 							<div class="6u 12u$(medium)">
 								<header class="major">
 									<h2>About Bryan</h2>
-									<p>A personal background</p>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
@@ -69,19 +68,24 @@
 					<div class="container">
 						<header class="major">
 							<h2>My Experience</h2>
-							<p>Some of my professional passions include<br /> leadership, design, coding, and VR.</p>
 						</header>
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/exp1.png" alt="" />
-									<h3>High-tech & entertainment</h3>
+									<h3>High-tech and Entertainment</h3>
+									<p>Some of my professional passions include:<br />
+										<li>leadership</li>
+										<li>design</li>
+										<li>coding</li>
+										<li>VR</li>
+										</p>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/exp2.png" alt="" />
-									<h3>Design & leadership</h3>
+									<h3>Design and Leadership</h3>
 								</div>
 							</div>
 
