--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Spatial by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-    Modified and re-coding by Bryan Tong (btong.me) for personal use.
+  Modifications and additional code by Bryan Tong (btong.me).
 -->
 <html>
 	<head>
@@ -53,8 +53,9 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<!-- Sorry, hidden while website is WIP.  Easter eggs yay!
-                        			<li><a href="http://blog.btong.me/">Blog</a></li>
-						<li><a href="bio.html">About</a></li> -->
+            <li><a href="http://blog.btong.me/">Blog</a></li>
+						<li><a href="bio.html">About</a></li>
+						-->
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -80,20 +81,14 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p>Hey there!  I'm a California native, born and raised in the Bay Area.
-                                I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
-                                and I aim to pick up a double-major in Legal Studies.  Eventually, I intend to work in the consumer electronics
-                                industry, specifically relating to interaction and virtual reality.</p>
-                                <!-- <p>Hey there!  I'm a California native, born and raised in the Bay Area.
-                                Though my last name is Chinese, I am actually a mix of Chinese, Japanese, and German.
-                                I speak English and Japanese, though there are many other languages I wish to learn.
-                                (This seems to be what most people are curious about.)</p>
-								<p>Originally homeschooled most of my life, I (for whatever reason)
-                                chose to change into public school and ended up here - UC Berkeley.
-                                I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
-                                and I aim to pick up a double-major in Legal Studies.</p> -->
-                               	<ul class="actions">
-									<li><a href="/bio.html" class="button alt">More Bio</a></li>
+								<p>Hey there!
+									 I'm a California native, born and raised in the Bay Area.
+                   I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
+                   and I aim to pick up a double-major in Legal Studies.  Eventually, I intend to work in the consumer electronics
+                   industry, specifically relating to interaction and virtual reality.
+								</p>
+               	<ul class="actions">
+									<li><a href="bio.html" class="button alt">More Bio</a></li>
 								</ul>
 							</div>
 						</div>
@@ -105,7 +100,9 @@
 					<div class="container">
 						<header class="major">
 							<h2>My Experience</h2>
-							<p>Some of my professional passions include<br /> leadership, design, coding, and VR.</p>
+							<p>Some of my professional passions include<br />
+								 leadership, design, coding, and VR.
+							</p>
 						</header>
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
@@ -202,7 +199,7 @@
                                         	<span style="color: #B2B2B2;">(925) 577-6826</span>
                                 </header>
                                 <p>Available for contracting work and tutoring.</p>
-                                
+
 							</div>
                             <!-- Right, contact -->
 							<div class="6u$ 12u$(medium)" style="color: white;">
@@ -230,8 +227,8 @@
 							</div>
 						</div>
 					</div>
-				</section>            
-			
+				</section>
+
             <!-- Footer -->
 			<footer id="footer">
 				<div class="container">
@@ -239,12 +236,15 @@
 						<li><a href="#" class="icon fa-facebook"></a></li>
 						<li><a href="#" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
-                        <li><a href="#" class="icon fa-github"></a></li>
+            <li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
 				    </ul>
 					<ul class="copyright">
 						<li>Copyright &copy; 2016 Bryan Tong</li>
-                        <li>R4.1a
+					</ul>
+					<ul class="copyright">
+						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
+            <li><a href="changelog.html">R4.3</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
