Hopefully favicon works...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-        <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+	  <link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
@@ -22,10 +23,10 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Bryan Tong" />
-        <meta property="og:description" content="The personal homepage of Bryan Tong." />
-        <meta property="og:image" content="http://btong.me/images/favicon.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bryan Tong" />
+    <meta property="og:description" content="The personal homepage of Bryan Tong." />
+    <meta property="og:image" content="http://btong.me/images/favicon.png" />
 		<script src="/google_analytics_auto.js"></script>
 	</head>
 	<body class="landing">
