--- a/chances.html
+++ b/chances.html
@@ -3,7 +3,7 @@
 	Spatial by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-    Modified and re-coding by Bryan Tong (btong.me) for personal use.
+	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 -->
 <html>
 	<head>
@@ -36,15 +36,11 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-                        <li><a href="http://blog.btong.me/">Blog</a></li>
+						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="bio.html">About</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="cs61a.html">CS61A</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
-                        <li><a href="chances.html">College Chances</a></li>
-                       	<!-- Removed for now.
-                        <li><a href="about.html">About</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-                        -->
 					</ul>
 				</nav>
 			</header>
@@ -108,15 +104,18 @@ getMessage()
        	<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
+					<!-- Temporarily Removed
 					<ul class="icons">
 						<li><a href="#" class="icon fa-facebook"></a></li>
 						<li><a href="#" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
-                        <li><a href="#" class="icon fa-github"></a></li>
+            			<li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
 				    </ul>
+				    -->
 					<ul class="copyright">
-						<li>Copyright &copy; 2016 Bryan Tong</li>
+						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
+            			<li><a href="changelog.html">R4.4</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
