--- a/changelog.html
+++ b/changelog.html
@@ -3,7 +3,7 @@
 	Spatial by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-  Modifications and additional code by Bryan Tong (btong.me).
+	Modifications and additional code by Bryan Tong (btong.me).
 -->
 <html>
 	<head>
@@ -73,7 +73,8 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p><strong>Latest revision date: May 7th, 2016</strong>
+								<p><strong>Latest revision date: July 7th, 2016</strong>
+								<li>R4.4 - Cleaned up code, added content for About, Projects, and 61A.
 								<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
 								<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
 								<li>R4.1a - Custom error pages.</li>
@@ -91,20 +92,21 @@
 
     	<!-- Footer -->
 			<footer id="footer">
-				<div class="container">
+				<!-- Temporarily Removed
 					<ul class="icons">
 						<li><a href="#" class="icon fa-facebook"></a></li>
 						<li><a href="#" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
-            <li><a href="#" class="icon fa-github"></a></li>
+            			<li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
 				    </ul>
+				    -->
 					<ul class="copyright">
 						<li>Copyright &copy; 2016 Bryan Tong</li>
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            <li><a href="changelog.html">R4.3</a>
+            			<li><a href="changelog.html">R4.4</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
