--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Spatial by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-  Modifications and additional code by Bryan Tong (btong.me).
+	Modifications and additional code by Bryan Tong (btong.me).
 -->
 <html>
 	<head>
@@ -53,10 +53,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<!-- Sorry, hidden while website is WIP.  Easter eggs yay!
-            <li><a href="http://blog.btong.me/">Blog</a></li>
+						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="bio.html">About</a></li>
-						-->
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="cs61a.html">CS61A</a></li>					
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -109,13 +109,13 @@
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/exp1.png" alt="" />
-									<h3>High-tech & entertainment</h3>
+									<h3>High-tech &amp; entertainment</h3>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/exp2.png" alt="" />
-									<h3>Design & leadership</h3>
+									<h3>Design &amp; leadership</h3>
 								</div>
 							</div>
 
@@ -233,19 +233,21 @@
       <!-- Footer -->
 			<footer id="footer">
 				<div class="container">
+					<!-- Temporarily Removed
 					<ul class="icons">
 						<li><a href="#" class="icon fa-facebook"></a></li>
 						<li><a href="#" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
-            <li><a href="#" class="icon fa-github"></a></li>
+            			<li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
 				    </ul>
+				    -->
 					<ul class="copyright">
 						<li>Copyright &copy; 2016 Bryan Tong</li>
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            <li><a href="changelog.html">R4.3</a>
+            			<li><a href="changelog.html">R4.4</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
