--- a/elements.html
+++ b/elements.html
@@ -31,6 +31,11 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html">Generic</a></li>
 						<li><a href="elements.html">Elements</a></li>
+						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
+						<li><a href="bio.html">About</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="cs61a.html">CS61A</a></li>					
+						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
