--- a/cs61a.html
+++ b/cs61a.html
@@ -61,6 +61,8 @@
 						Overall review and practice problems - <a href="http://markmiyashita.com/cs61a/sp14/">Mark Miyashita</a>
 						<br />
 						In-depth concepts and test review - <a href="http://albertwu.org/cs61a/">Albert Wu</a>
+						<br />
+						List of approved past exams - <a href="https://www.ocf.berkeley.edu/~shidi/cs61a/wiki/Past_exams">OCF</a>
 						</p>
 				</div>
 			</section>
