--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Bryan Tong</h2>
-				<p>Student at UC Berkeley<br />Designer &amp; Entrepreneur</p>
+				<p>CogSci Student at UC Berkeley<br />Designer, Coder, &amp; Entrepreneur</p>
 				<ul class="actions">
 					<li><a href="#about" class="button special big">Who?</a></li>
 				</ul>
@@ -82,11 +82,11 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p>Hey there!
-									 I'm a California native, born and raised in the Bay Area.
-                   I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
-                   and I aim to pick up a double-major in Legal Studies.  Eventually, I intend to work in the consumer electronics
-                   industry, specifically relating to interaction and virtual reality.
+								<p><i>Hey there!</i>
+								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
+                        I'm pursuing a double major in Cognitive Science, focused in Human-Computer interaction, and Legal Studies.
+                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
+                        just running a boba cafe in SF.
 								</p>
                	<ul class="actions">
 									<li><a href="bio.html" class="button alt">More Bio</a></li>
@@ -121,8 +121,8 @@
 
 						</div>
 						<ul class="actions">
-							<li><a href="/blog.html" class="button special big">Projects</a></li>
-							<li><a href="/Resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
+							<li><a href="/projects.html" class="button special big">Projects</a></li>
+							<li><a href="/resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
 						</ul>
 					</div>
 				</section>
