--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,10 @@
         <meta property="og:image" content="http://btong.me/images/favicon.png" />
 		<script src="/google_analytics_auto.js"></script>
 	</head>
-	<body class="landing">
+	<body>
 
 		<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header">
 				<h1><strong><a href="index.html">Bryan Tong</a></strong> (btong.me)</h1>
 				<nav id="nav">
 					<ul>
@@ -44,12 +44,6 @@
 					</ul>
 				</nav>
 			</header>
-            
-		<!-- Banner -->
-			<section id="banner">
-				<h2>Projects</h2>
-				<p>WIP</p>
-			</section>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
