--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 							<div class="6u$ 12u$(medium)">
 								<p><i>Hey there!</i>
 								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
-                        I'm pursuing a double major in Cognitive Science, focused in Human-Computer interaction, and Legal Studies.
-                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
-                        just running a boba cafe in SF.
+		                        I'm pursuing a double major in Cognitive Science, focused in Human-Computer interaction, and Legal Studies.
+		                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
+		                        just running a boba cafe in SF.
 								</p>
                	<ul class="actions">
 									<li><a href="bio.html" class="button alt">More Bio</a></li>
@@ -121,7 +121,7 @@
 
 						</div>
 						<ul class="actions">
-							<li><a href="/projects.html" class="button special big">Projects</a></li>
+							<li><a href="projects.html" class="button special big">Projects</a></li>
 							<li><a href="/resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
 						</ul>
 					</div>
@@ -175,6 +175,7 @@
 									<p>Stocks, investments, and financial terms aren't unfamilar to this tech nerd.  At the age of 13 began investing with a focus in tech - with the most successful portfolio doubling in a few years.</p>
 								</div>
 							</div>
+							
 						</div>
 					</div>
 				</section>
@@ -196,17 +197,17 @@
                                         <h3 style="color: #B2B2B2;">Email</h3>
                                         	<a href="mailto:btong@berkeley.edu">btong@berkeley.edu</a>
                                         <br />
-                                        <h3 style="color: #B2B2B2;">Phone</h3>
-                                        	<span style="color: #B2B2B2;">(925) 577-6826</span>
+
                                 </header>
-                                <p>Available for contracting work and tutoring.</p>
+                                <p>Currently unavailable for contracting or tutoring.<br />
+                                Please contact for business inquiries or website topics!
+                                </p>
 
 							</div>
                             <!-- Right, contact -->
 							<div class="6u$ 12u$(medium)" style="color: white;">
                                 <p>
                                 Academic season - replies in 48 hours at latest.<br />
-                                For business inquiries please manually email me.<br />
                                 Contact form via <a href="http://formspree.io/">Formspree</a>.
                                 </p>
                                 <form action="http://formspree.io/btong@berkeley.edu" method="POST">
