--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,10 @@
         <meta property="og:image" content="http://btong.me/images/favicon.png" />
 		<script src="/google_analytics_auto.js"></script>
 	</head>
-	<body>
+	<body class="landing">
 
 		<!-- Header -->
-			<header id="header">
+			<header id="header" class="alt">
 				<h1><strong><a href="index.html">Bryan Tong</a></strong> (btong.me)</h1>
 				<nav id="nav">
 					<ul>
@@ -45,19 +45,31 @@
 				</nav>
 			</header>
 
+		<!-- Banner -->
+			<section id="banner">
+				<h2>Projects</h2>
+				<p>Current &amp; Past Projects</p>
+			</section>
+
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="container">
 					<header class="major special">
-						<p>Current Projects</p>
+						<p><strong>Current Projects</strong></p>
 					</header>
-						<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+						<strong>Sunset Project - Pixel Brawling Chaos</strong>
+						<a href="#" class="image fit"><img src="images/pic01.png" alt="" /></a>
                         <p>WIP</p>
 
                     <header class="major special">
-						<p>Past Projects</p>
+						<p><strong>Past Projects</strong></p>
 					</header>
-						<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+						<strong>MIRAI Apparel - American-made Streetwear</strong>
+						<a href="#" class="image fit"><img src="images/pic01.png" alt="" /></a>
+                        <p>WIP</p>
+
+						<strong>RGB - A Rhythm Game</strong>
+						<a href="#" class="image fit"><img src="images/pic01.png" alt="" /></a>
                         <p>WIP</p>
 
 				</div>
