--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
 						<p><strong>Current Projects</strong></p>
 					</header>
 						<strong>Sunset Project - Pixel Brawling Chaos</strong>
-						<a href="http://sunset.btong.me/" class="image fit"><img src="images/exp1.png" alt="Sunset Project - Character Select Screen, made by Bryan Tong" /></a>
+						<a href="http://sunset.btong.me/" class="image fit"><img src="images/projectSunset.png" alt="Sunset Project - Character Select Screen, made by Bryan Tong" /></a>
                         <p>WIP</p>
 
                     <header class="major special">
