About.html redirection

--- a/changelog.html
+++ b/changelog.html
@@ -73,7 +73,8 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p><strong>Latest revision date: July 7th, 2016</strong>
+								<p><strong>Latest revision date: July 21st, 2016</strong>
+								<li>R4.5 - Updated and renamed about.html, adding to projects.html
 								<li>R4.4 - Cleaned up code, added content for About, Projects, and 61A.
 								<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
 								<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
