--- a/chances.html
+++ b/chances.html
@@ -36,8 +36,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
-						<li><a href="bio.html">About</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="cs61a.html">CS61A</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
