--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
-						<li><a href="bio.html">About</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="cs61a.html">CS61A</a></li>					
 						<li><a href="#contact">Contact</a></li>
