--- a/about.html
+++ b/about.html
@@ -69,10 +69,11 @@
                         I've flown a lot growing up.  I've traveled to most US states and even drove straight to Texas! Internationally, I've visited: Italy, Spain, Germany, UK, Croatia, and Japan.</p>
 
                         <p><strong>My Education</strong><br />
+                        <p>
                         Until my sophmore year of high school, I was homeschooled and educated by my mother, whom retired from radiology
                         to homeschool my sister and I.  Though unconventional, it allowed me to cover standard subjects while exploring
                         a variety of interests - computers, cars, nature - to a greater degree before the SATs rolled around.
-                        By then, I chose to transfer into public school and wound up now at UC Berkeley.
+                        By then, I chose to transfer into public school and ended up now at UC Berkeley.</p><p>
                         I get asked often if traditional or homeschooling is better.  Though public school prepared me for standardized
                         testing and contributed to my academic history, homeschooling and my fantastic parents shaped much of my character
                         in a healthier, encouraging environment.  I've tried my best to synthesize the positive aspects of both backgrounds of education.  Parents are often curious of this, so feel free to contact me about it.  I'm hoping it pays off!</p>
@@ -107,7 +108,7 @@
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.4</a>
+            			<li><a href="changelog.html">R4.5</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
