--- a/cs61a.html
+++ b/cs61a.html
@@ -64,6 +64,58 @@
 						<br />
 						List of approved past exams - <a href="https://www.ocf.berkeley.edu/~shidi/cs61a/wiki/Past_exams">OCF</a>
 						</p>
+						<strong>Oh hey code!</strong>
+							<pre><code>i = 0;
+
+while (!deck.isInOrder()) {
+print 'Iteration ' + i;
+deck.shuffle();
+i++;
+}
+
+print 'It took ' + i + ' iterations to sort the deck.';</code>
+							</pre>
+				<h3>Testing table:</h3>
+							<h4>Default</h4>
+							<div class="table-wrapper">
+								<table>
+									<thead>
+										<tr>
+											<th>Course #</th>
+											<th>Title</th>
+											<th>Year</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>CS 10</td>
+											<td>The beauty and joy of computing.</td>
+											<td>Fall 2015</td>
+										</tr>
+										<tr>
+											<td>CS 61A</td>
+											<td>Ante turpis integer aliquet porttitor.</td>
+											<td>Spring 2016</td>
+										</tr>
+										<tr>
+											<td>CS 61B</td>
+											<td>Vis ac commodo adipiscing arcu aliquet.</td>
+											<td>Fall 2016</td>
+										</tr>
+										<tr>
+											<td>CS 61C</td>
+											<td> Morbi faucibus arcu accumsan lorem.</td>
+											<td>Spring 2017</td>
+										</tr>
+
+										<tr>
+											<td>Whats next?!</td>
+											<td>!?.</td>
+											<td>When?!</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 				</div>
 			</section>
 
@@ -81,7 +133,7 @@
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.4</a>
+            			<li><a href="changelog.html">R4.5</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
