--- a/projects.html
+++ b/projects.html
@@ -54,24 +54,39 @@
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="container">
-					<header class="major special">
-						<p><strong>Current Projects</strong></p>
-					</header>
-						<strong>Sunset Project - Pixel Brawling Chaos</strong>
+					<header>
+						<h2>Current Projects</h2>
+						<!-- Sunset -->
+						<p>Sunset Project - Pixel Brawling Chaos</p>
 						<a href="http://sunset.btong.me/" class="image fit"><img src="images/projectSunset.png" alt="Sunset Project - Character Select Screen, made by Bryan Tong" /></a>
-                        <p>WIP</p>
-
-                    <header class="major special">
-						<p><strong>Past Projects</strong></p>
 					</header>
-						<strong>MIRAI Apparel - American-made Streetwear</strong>
-						<a href="#" class="image fit"><img src="images/exp2.png" alt="MIRAI Apparel - A former streetwear brand run by CEO Bryan Tong" /></a>
-                        <p>WIP</p>
+						<p>Originally a present for some friends, Sunset Project has grown into a full-fledged online brawling game!<br />
+						Features multiple servers for lag-free combat with up to six players, 6+ unique characters, 3+ maps, customizable controls,
+						and hilarious aerial physics - all with a little hint of nostalgia.  Join the brawl today!  Free for iOS and Android.</p>
+						
+   	
+					<header>
+						<h2>Retired Projects</h2>
+						<p>MIRAI Apparel - American-made Streetwear</p>
+						<a href="#" class="image fit"><img src="images/projectMirai.png" alt="MIRAI Apparel - A former streetwear brand run by CEO Bryan Tong" /></a>
+					</header>
+						<p>During highschool, I noticed the unsettling trend that virtually all clothing is manufactured under
+						exploitative and unfair working conditions.  Since I was beginning to become interested in entrepreneurial
+						pursuits around this time, I decided to launch a startup to educate against unfair labor conditions and sell my
+						designs locally.  All of this clothing was produced ethnically and entirely in America.  Over the course of a year,
+						MIRAI Apparel grew from a local project to a full-scale online business, and the experiences of monetary and logistical hiccups forced me into a more realistic understanding of running a company.  As profits slimmed
+						and my interest shifted more towards technology, I felt fulfilled with my project and decided to retire MIRAI.
+						If you keep an eye out around the Bay Area, there's still a number of friends and customers repping the brand - and even
+						a few internationally!
 
-						<strong>RGB - A Rhythm Game</strong>
-						<a href="#" class="image fit"><img src="images/pic01.png" alt="" /></a>
-                        <p>WIP</p>
-
+						</p>
+					<!--
+					<header>
+						<p>RGB - A Rhythm Game</p>
+					</header>
+					<a href="#" class="image fit"><img src="images/pic01.png" alt="" /></a>
+                    <p>The first game I helped create!</p>
+					-->
 				</div>
 			</section>
 
@@ -89,7 +104,7 @@
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.4</a>
+            			<li><a href="changelog.html">R4.5</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
