--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<h2>Bryan Tong</h2>
 				<p>CogSci Student at UC Berkeley<br />Designer, Coder, &amp; Entrepreneur</p>
 				<ul class="actions">
-					<li><a href="#about" class="button special big">Who?</a></li>
+					<li><a href="#about" class="button">Who?</a></li>
 				</ul>
 			</section>
 
@@ -88,8 +88,8 @@
 		                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
 		                        just running a boba cafe in SF.
 								</p>
-               	<ul class="actions">
-									<li><a href="bio.html" class="button alt">More Bio</a></li>
+               					<ul class="actions">
+									<li><a href="about.html" class="button alt">More Bio</a></li>
 								</ul>
 							</div>
 						</div>
@@ -205,8 +205,8 @@
 
 							</div>
                             <!-- Right, contact -->
-							<div class="6u$ 12u$(medium)" style="color: white;">
-                                <p>
+							<div class="6u$ 12u$(medium)">
+                                <p style="color: white;">
                                 Academic season - replies in 48 hours at latest.<br />
                                 Contact form via <a href="http://formspree.io/">Formspree</a>.
                                 </p>
@@ -219,6 +219,16 @@
                                             <input name="email" placeholder="Email" type="email" />
                                         </div>
                                         <div class="12u$">
+											<div class="select-wrapper">
+												<select name="category" id="category">
+													<option value="">General</option>
+													<option value="1">Business / Contracting</option>
+													<option value="1">Website Bug</option>
+													<option value="1">Sunset Project</option>
+												</select>
+											</div>
+										</div>
+										<div class="12u$">
                                             <textarea name="message" placeholder="Message" rows="4"></textarea>
                                         </div>
                                     </div>
@@ -248,7 +258,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.4</a>
+            			<li><a href="changelog.html">R4.5</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
