--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 					</header>
 						<p>Originally a present for some friends, Sunset Project has grown into a full-fledged online brawling game!<br />
 						Features multiple servers for lag-free combat with up to six players, 6+ unique characters, 3+ maps, customizable controls,
-						and hilarious aerial physics - all with a little hint of nostalgia.  Join the brawl today!  Free for iOS and Android.</p>
+						and hilarious aerial physics - all with a little hint of nostalgia.  Join the brawl today!  Free for iOS and <a href="https://play.google.com/store/apps/details?id=com.KiteLion.Sunset">Android.</a></p>
 						
    	
 					<header>
