Updated passions images!

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/exp3.png" alt="" />
-									<h3>High-tech &amp; entertainment</h3>
+									<h3>Tech &amp; entertainment</h3>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
@@ -136,7 +136,7 @@
 						</header>
 						<div class="feature-grid">
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/pic04.jpg" alt="Bryan Tong - Consumer Technology"/></div>
 								<div class="content">
 									<header>
 										<h4>Consumer Technology</h4>
@@ -146,7 +146,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/pic05.jpg" alt="Bryan Tong - Entrepreneur"/></div>
 								<div class="content">
 									<header>
 										<h4>Entrepreneurship &amp; Management</h4>
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/pic06.jpg" alt="Bryan Tong - Entertainment"/></div>
 								<div class="content">
 									<header>
 										<h4>Entertaining People</h4>
@@ -166,7 +166,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/pic07.jpg" alt="Bryan Tong - Investing"/></div>
 								<div class="content">
 									<header>
 										<h4>Smart Investing</h4>
