updated outdated index issues

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 										<h4>Consumer Technology</h4>
 										<p>Sleek design and useful applications</p>
 									</header>
-									<p>Cutting-edge technology and consumer technology has always been a massive interest in my life.  Ever since picking up my first PDA and game console, I have strived to be involved the field.</p>
+									<p>Innovative, trendy consumer technology is a massive interest for my career.  Ever since picking up my first PDA and touchscreen device, I have strived to be involved the field.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -162,7 +162,7 @@
 										<h4>Entertaining People</h4>
 										<p>Creating friendships through tech</p>
 									</header>
-									<p>On the side, I channel my passion for video games into indie games and virtual reality.  Recently, I created a few educational games and Eggnog Project in collaboration with Kitelion Studios.</p>
+									<p>On the side, I channel my passion for video games into indie games and virtual reality.  Recently, I created a few educational games and <a href="http://sunset.btong.me/">Sunset Project</a> in collaboration with <a href="http://kitelion.me/">Home</a>.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -170,9 +170,9 @@
 								<div class="content">
 									<header>
 										<h4>Smart Investing</h4>
-										<p>Diving into the harsh world of investing</p>
+										<p>Progress through investing</p>
 									</header>
-									<p>Stocks, investments, and financial terms aren't unfamilar to this tech nerd.  At the age of 13 began investing with a focus in tech - with the most successful portfolio doubling in a few years.</p>
+									<p>Stocks, investments, and financial terms aren't unfamilar to this tech nerd.  At the age of 13, I began investing with a focus in tech - with the most successful portfolio doubling in a few years.</p>
 								</div>
 							</div>
 							
