--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 							<div class="6u$ 12u$(medium)">
 								<p><i>Hey there!</i>
 								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
-		                        I'm pursuing a double major in Cognitive Science, focused in Human-Computer interaction, and Legal Studies.
-		                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
-		                        just running a boba cafe in SF.
+		                        I'm pursuing a degree in Cognitive Science with a focus in Human-Computer Interaction / AI.
+		                        Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might just end up running a boba cafe in SF.
 								</p>
                					<ul class="actions">
 									<li><a href="about.html" class="button alt">More Bio</a></li>
@@ -162,7 +161,7 @@
 										<h4>Entertaining People</h4>
 										<p>Creating friendships through tech</p>
 									</header>
-									<p>On the side, I channel my passion for video games into indie games and virtual reality.  Recently, I created a few educational games and <a href="http://sunset.btong.me/">Sunset Project</a> in collaboration with <a href="http://kitelion.me/">Home</a>.</p>
+									<p>On the side, I channel my passion for video games into indie games and virtual reality.  Recently, I created a few educational games and <a href="http://sunset.btong.me/">Sunset Project</a> in collaboration with <a href="http://kitelion.me/">Kitelion Games</a>.</p>
 								</div>
 							</div>
 							<div class="feature">
