--- a/projects.html
+++ b/projects.html
@@ -57,10 +57,10 @@
 					<header>
 						<h2>Current Projects</h2>
 						<!-- Sunset -->
-						<p>Sunset Project - Pixel Brawling Chaos</p>
+						<p>Sunset Brawlers - Pixel Brawling Chaos</p>
 						<a href="http://sunset.btong.me/" class="image fit"><img src="images/projectSunset.png" alt="Sunset Project - Character Select Screen, made by Bryan Tong" /></a>
 					</header>
-						<p>Originally a present for some friends, Sunset Project has grown into a full-fledged online brawling game!<br />
+						<p>Originally a present for some friends, Sunset Brawlers has grown into a full-fledged online brawling game!<br />
 						Features multiple servers for lag-free combat with up to six players, 6+ unique characters, 3+ maps, customizable controls,
 						and hilarious aerial physics - all with a little hint of nostalgia.  Join the brawl today!  Free for iOS and <a href="https://play.google.com/store/apps/details?id=com.KiteLion.Sunset">Android.</a></p>
 						
