--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Bryan Tong</h2>
+				<h2><img src="images/btongwlogo.png" alt="Bryan Tong"></h2>
 				<p>CogSci Student at UC Berkeley<br />Designer, Coder, &amp; Entrepreneur</p>
 				<ul class="actions">
 					<li><a href="#about" class="button">Who?</a></li>
