--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2><img src="images/btongwlogo.png" alt="Bryan Tong"></h2>
+				<h2>Bryan Tong</h2>
 				<p>CogSci Student at UC Berkeley<br />Designer, Coder, &amp; Entrepreneur</p>
 				<ul class="actions">
 					<li><a href="#about" class="button">Who?</a></li>
@@ -83,8 +83,7 @@
 							</div>
 							<div class="6u$ 12u$(medium)">
 								<p><i>Hey there!</i>
-								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
-		                        I'm pursuing a degree in Cognitive Science with a focus in Human-Computer Interaction / AI.
+								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with a focus in Human-Computer Interaction / AI.
 		                        Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might just end up running a boba cafe in SF.
 								</p>
                					<ul class="actions">
