--- a/cs61a.html
+++ b/cs61a.html
@@ -103,6 +103,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code>
 											<td>Fall 2016</td>
 										</tr>
 										<tr>
+											<td>CS 70</td>
+											<td>Vis ac commodo adipiscing arcu aliquet.</td>
+											<td>Fall 2016</td>
+										</tr>
+										<tr>
+											<td>Ruby on Rails</td>
+											<td>Vis ac commodo adipiscing arcu aliquet.</td>
+											<td>Fall 2016</td>
+										</tr>
+										<tr>
 											<td>CS 61C</td>
 											<td> Morbi faucibus arcu accumsan lorem.</td>
 											<td>Spring 2017</td>
