Fixed many typos

--- a/about.html
+++ b/about.html
@@ -63,18 +63,18 @@
                         A frequent question I get is about my ethnicity - though my last name is Chinese, 
                         I am actually multi-ethnic: a mix of Chinese, Japanese, and German.
                         I speak English and informal Japanese, though there are so many other languages I want to learn!
-                        Traveling to not only embrace my roots - but to explore other cultures is a huge interest of mine.
+                        Traveling is a huge interest of mine - I want to both explore my roots and experience new cultures.
                         I've flown a lot growing up.  I've traveled to most US states and even drove straight to Texas! Internationally, I've visited: Italy, Spain, Germany, UK, Croatia, and Japan.</p>
 
                         <p><strong>My Education</strong><br />
                         <p>
-                        Until my sophmore year of high school, I was homeschooled and educated by my mother, whom retired from radiology
-                        to homeschool my sister and I.  Though unconventional, it allowed me to cover standard subjects while exploring
+                        Until my sophmore year in high school, I was homeschooled by my mother who retired from radiology
+                        to homeschool my sister and me.  Though unconventional, it allowed me to cover standard subjects while exploring
                         a variety of interests - computers, cars, nature - to a greater degree before the SATs rolled around.
                         By then, I chose to transfer into public school and ended up now at UC Berkeley.</p><p>
                         I get asked often if traditional or homeschooling is better.  Though public school prepared me for standardized
                         testing and contributed to my academic history, homeschooling and my fantastic parents shaped much of my character
-                        in a healthier, encouraging environment.  I've tried my best to synthesize the positive aspects of both backgrounds of education.  Parents are often curious of this, so feel free to contact me about it.  I'm hoping it pays off!</p>
+                        in a healthier, encouraging environment.  I've tried my best to synthesize the positive aspects of both educational environments.  Parents are often curious about these details, so feel free to contact me about it.  I'm hoping it pays off!</p>
 
                         <p><strong>This Website</strong><br />
                         I love tinkering with things and coding somewhat by trial-and-error.  Since the early web boom, I've made and modified websites for fun, projects, and video games.  This is my personal website - a mix of code testing, information, and portfolios.  Since there are many fantastic HTML5 templates nowadays, I heavily modified this one to fit my needs.
