--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 										<h4>Entrepreneurship &amp; Management</h4>
 										<p>Connected, understanding, efficient</p>
 									</header>
-									<p>When my dad lost his job during the recession, I gained my first taste of entrepreneurship.  My apparel startup quickly grew international recogntion with 5-figure revenue.</p>
+									<p>When my dad lost his job during the recession, I gained my first taste of entrepreneurship.  My apparel startup quickly acquired international recognition with 5-figure revenue.</p>
 								</div>
 							</div>
 							<div class="feature">
