--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,8 @@
 						<p>During highschool, I noticed the unsettling trend that virtually all clothing is manufactured under
 						exploitative and unfair working conditions.  Since I was beginning to become interested in entrepreneurial
 						pursuits around this time, I decided to launch a startup to educate against unfair labor conditions and sell my
-						designs locally.  All of this clothing was produced ethnically and entirely in America.  Over the course of a year,
-						MIRAI Apparel grew from a local project to a full-scale online business, and the experiences of monetary and logistical hiccups forced me into a more realistic understanding of running a company.  As profits slimmed
+						designs locally.  All of this clothing was produced ethically and entirely in America.  Over the course of a year,
+						MIRAI Apparel grew from a local project to a full-scale online business, and the experiences of financial and logistical hiccups forced me into a more realistic understanding of running a company.  As profits slimmed
 						and my interest shifted more towards technology, I felt fulfilled with my project and decided to retire MIRAI.
 						If you keep an eye out around the Bay Area, there's still a number of friends and customers repping the brand - and even
 						a few internationally!
