--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <!-- Right, contact -->
 							<div class="6u$ 12u$(medium)">
                                 <p style="color: white;">
-                                Academic season - replies in 48 hours at latest.<br />
+                                Academic season - replies in 48 hours at the latest.<br />
                                 Contact form via <a href="http://formspree.io/">Formspree</a>.
                                 </p>
                                 <form action="http://formspree.io/btong@berkeley.edu" method="POST">
