--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
+						<li><a href="cv.html">CV</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
