--- a/cs61a.html
+++ b/cs61a.html
@@ -39,7 +39,7 @@
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="cs61a.html">CS61A</a></li>					
+						<li><a href="cv.html">CV</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
