--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
+						<li><a href="cv.html">CV</a></li>					
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
