--- a/about.html
+++ b/about.html
@@ -57,8 +57,7 @@
                         <p><strong>My Background</strong><br />
 						I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
                         I'm pursuing a major in Cognitive Science, focused in Human-Computer interaction, and ideally a minor in CS or Legal Studies.
-                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
-                        just running a boba cafe in SF.</p>
+                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe..</p>
                         <a href="#" class="image fit"><img src="images/pic01.png" alt="Some photos of me!"/></a> 
                         <p>
                         A frequent question I get is about my ethnicity - though my last name is Chinese, 
