--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<div class="6u$ 12u$(medium)">
 								<p><i>Hey there!</i>
 								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with a focus in Human-Computer Interaction / AI.
-		                        Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might just end up running a boba cafe in SF.
+		                        Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
 								</p>
                					<ul class="actions">
 									<li><a href="about.html" class="button alt">More Bio</a></li>
