--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						</div>
 						<ul class="actions">
 							<li><a href="projects.html" class="button special big">Projects</a></li>
-							<li><a href="/ResumeNew.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
+							<li><a href="/resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
 						</ul>
 					</div>
 				</section>
